Refactor resource classes to use EntityUtils for cleaner entity validation and exception handling